Update linuxstuff.md